--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                 </div>
                 
                 <div class="input-group">
+                    <label for="additionalCharges" class="font-bold text-lg">Additional Charges (₹/month):</label>
+                    <input type="number" id="additionalCharges" step="0.01" required placeholder="e.g., 100" value="0" class="text-lg">
+                </div>
+                
+                <div class="input-group">
                     <label for="inflationRate" class="font-bold text-lg">Electricity Inflation (%):</label>
                     <input type="number" id="inflationRate" step="0.1" required placeholder="e.g., 4.0" value="4.0" class="text-lg">
                 </div>
