added website link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <img src="logo.png" alt="Ray2Volt Solar Logo" class="sidebar-logo mb-0 w-40">
                 <p class="company-name font-bold mt-0 text-xl">Ray2Volt Solar Pvt Ltd</p>
                 <p class="text-sm opacity-75">Solar Investment Calculator</p>
+                <p class="text-sm opacity-75">
+                    Interested in going solar with us? 
+                    <a href="https://ray2voltsolar.com" target="_blank" class="text-blue-500 hover:underline">Visit our website!</a>
+                </p>
             </div>
             
             <form id="solarForm" class="input-form" onsubmit="return false;">
