--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&family=Nunito+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Ray2Volt Solar Pvt Ltd logo new big.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
         body {
