--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
                         <option value="6">6 kW</option>
                         <option value="8">8 kW</option>
                         <option value="10">10 kW</option>
+                        <option value="manual">Manual Entry</option>
                     </select>
+                </div>
+                <div class="input-group" id="manualKwInputGroup" style="display: none;">
+                    <label for="manualKwInput" class="font-bold text-lg">Manual System Capacity (kW):</label>
+                    <input type="number" id="manualKwInput" placeholder="Enter kW (e.g., 12)" class="text-lg" step="0.1" oninput="calculateSavings()">
                 </div>
                 
                 <div class="input-group">
                     <label for="totalCost" class="font-bold text-lg">Total Project Cost (₹):</label>
-                    <input type="number" id="totalCost" value="370000" readonly placeholder="Auto-calculated based on kW capacity" class="text-lg">
-                    <small>Auto-calculated based on the selected kW capacity.</small>
+                    <input type="number" id="totalCost" placeholder="Enter project cost" class="text-lg">
+                    <small>Auto-filled for 2-10 kW, editable. Enter manually for other capacities.</small>
                 </div>
                 
                 <div class="input-group">
