chnaged the logo and fonts

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Solar Savings Calculator - Ray2Volt Solar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&family=Nunito+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600;700&family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Ray2Volt Solar Pvt Ltd new logo for websites.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
         body {
-          font-family: 'League Spartan', sans-serif;
+          font-family: 'Nunito Sans';
+        }
+        h1, h2, h3, h4, h5, h6 {
+          font-family: 'League Spartan';
         }
       </style>
 </head>
@@ -20,8 +23,7 @@
     <div class="calculator-wrapper">
         <aside id="sidebar">
             <div class="sidebar-header">
-                <img src="logo.png" alt="Ray2Volt Solar Logo" class="sidebar-logo mb-0 w-40">
-                <p class="company-name font-bold mt-0 text-xl">Ray2Volt Solar Pvt Ltd</p>
+                <img src="logo.png" alt="Ray2Volt Solar Logo" class="sidebar-logo mb-0">
                 <p class="text-sm opacity-75">Solar Investment Calculator</p>
                 <p class="text-sm opacity-75">
                     Interested in going solar with us? 
@@ -41,7 +43,9 @@
                         <option value="4">4 kW</option>
                         <option value="5">5 kW</option>
                         <option value="6">6 kW</option>
+                        <option value="7">7 kW</option>
                         <option value="8">8 kW</option>
+                        <option value="9">9 kW</option>
                         <option value="10">10 kW</option>
                         <option value="manual">Manual Entry</option>
                     </select>
